--- a/src/main/resources/views/registration.fxml
+++ b/src/main/resources/views/registration.fxml
@@ -5,29 +5,40 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="program.controllers.RegistrationController">
+<AnchorPane fx:id="registrationOUT" prefHeight="500.0" prefWidth="600.0" styleClass="registrationOUT" stylesheets="@../style/registrationStyle.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="program.controllers.RegistrationController">
    <children>
-      <AnchorPane layoutX="100.0" prefHeight="500.0" prefWidth="400.0">
+      <AnchorPane layoutX="100.0" prefHeight="500.0" prefWidth="400.0" styleClass="registrationIN" stylesheets="@../style/registrationStyle.css">
+         <effect>
+            <DropShadow />
+         </effect>
+      </AnchorPane>
+      <AnchorPane fx:id="registrationIN" layoutX="100.0" prefHeight="500.0" prefWidth="400.0" styleClass="registrationIN" stylesheets="@../style/registrationStyle.css">
          <children>
-            <Label layoutX="160.0" layoutY="30.0" text="Regisztráció" />
-            <Label layoutX="24.0" layoutY="101.0" text="Név" />
-            <Label layoutX="26.0" layoutY="136.0" text="Jelszó" />
-            <Label layoutX="26.0" layoutY="170.0" text="Jelszó" />
-            <Label layoutX="26.0" layoutY="205.0" text="Neme" />
+            <Label layoutX="160.0" layoutY="30.0" text="Registration" />
+            <Label layoutX="24.0" layoutY="101.0" text="Name" />
+            <Label layoutX="26.0" layoutY="136.0" text="Password" />
+            <Label layoutX="26.0" layoutY="170.0" text="Password" />
+            <Label layoutX="26.0" layoutY="205.0" text="Gender" />
             <TextField fx:id="textName" layoutX="98.0" layoutY="96.0" />
             <PasswordField fx:id="textPassword" layoutX="98.0" layoutY="131.0" />
             <PasswordField fx:id="textPasswordCheck" layoutX="98.0" layoutY="165.0" />
-            <Button fx:id="buttonRegistration" layoutX="153.0" layoutY="390.0" mnemonicParsing="false" onAction="#registration" text="Regisztrálás" />
-            <RadioButton fx:id="radioWoman" layoutX="98.0" layoutY="205.0" mnemonicParsing="false" text="Nő" />
-            <RadioButton fx:id="radioMan" layoutX="160.0" layoutY="205.0" mnemonicParsing="false" text="Férfi" />
-            <RadioButton fx:id="radioWeightLoss" layoutX="129.0" layoutY="243.0" mnemonicParsing="false" text="Súlycsökkentő" />
-            <Label layoutX="24.0" layoutY="243.0" text="Edzésterv típusa" />
-            <RadioButton fx:id="radioCutting" layoutX="129.0" layoutY="269.0" mnemonicParsing="false" text="Szálkásító" />
+            <Button fx:id="buttonRegistration" layoutX="153.0" layoutY="390.0" mnemonicParsing="false" onAction="#registration" text="Registration" />
+            <RadioButton fx:id="radioFemale" layoutX="163.0" layoutY="205.0" mnemonicParsing="false" text="Female" />
+            <RadioButton fx:id="radioMale" layoutX="98.0" layoutY="205.0" mnemonicParsing="false" text="Male" />
+            <RadioButton fx:id="radioWeightLoss" layoutX="129.0" layoutY="243.0" mnemonicParsing="false" text="Weight Loss" />
+            <Label layoutX="24.0" layoutY="243.0" text="Workout type" />
+            <RadioButton fx:id="radioCutting" layoutX="129.0" layoutY="269.0" mnemonicParsing="false" text="Cutting" />
             <ImageView fitHeight="300.0" fitWidth="100.0" layoutX="276.0" layoutY="96.0" pickOnBounds="true" preserveRatio="true" />
-            <Button fx:id="buttonBackToLogin" layoutX="117.0" layoutY="424.0" mnemonicParsing="false" onAction="#backToLogin" text="Vissza a bejelentkezéshez" />
+            <Button fx:id="buttonBackToLogin" layoutX="151.0" layoutY="423.0" mnemonicParsing="false" onAction="#backToLogin" text="Back to login" />
+            <ImageView fx:id="imageGender" fitHeight="300.0" fitWidth="100.0" layoutX="276.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" />
+            <Label layoutX="24.0" layoutY="304.0" text="Your weight" />
+            <Label layoutX="24.0" layoutY="339.0" text="Goal weight" />
+            <TextField fx:id="textYourWeight" layoutX="101.0" layoutY="300.0" />
+            <TextField fx:id="textGoalWeight" layoutX="101.0" layoutY="335.0" />
          </children>
       </AnchorPane>
    </children>
