--- a/src/main/resources/views/setmainpage.fxml
+++ b/src/main/resources/views/setmainpage.fxml
@@ -39,11 +39,11 @@
             <Label fx:id="repsAmount5" layoutX="233.0" layoutY="334.0" text="4 x 14" />
             <Button fx:id="buttonCancel" layoutX="145.0" layoutY="410.0" mnemonicParsing="false" onAction="#actionCancel" text="Cancel" />
             <Button fx:id="buttonSave" layoutX="213.0" layoutY="410.0" mnemonicParsing="false" onAction="#actionSave" text="Save" />
-            <TextField fx:id="textGluSho" layoutX="285.0" layoutY="130.0" prefHeight="25.0" prefWidth="42.0" />
-            <TextField fx:id="textQuChe" layoutX="285.0" layoutY="180.0" prefHeight="25.0" prefWidth="42.0" />
-            <TextField fx:id="textHamBi" layoutX="285.0" layoutY="230.0" prefHeight="25.0" prefWidth="42.0" />
-            <TextField fx:id="textCalBa" layoutX="285.0" layoutY="280.0" prefHeight="25.0" prefWidth="42.0" />
-            <TextField fx:id="textAbs" layoutX="285.0" layoutY="330.0" prefHeight="25.0" prefWidth="42.0" />
+            <TextField fx:id="textGluSho" layoutX="285.0" layoutY="130.0" prefHeight="25.0" prefWidth="42.0" text="10" />
+            <TextField fx:id="textQuChe" layoutX="285.0" layoutY="180.0" prefHeight="25.0" prefWidth="42.0" text="10" />
+            <TextField fx:id="textHamBi" layoutX="285.0" layoutY="230.0" prefHeight="25.0" prefWidth="42.0" text="10" />
+            <TextField fx:id="textCalBa" layoutX="285.0" layoutY="280.0" prefHeight="25.0" prefWidth="42.0" text="10" />
+            <TextField fx:id="textAbs" layoutX="285.0" layoutY="330.0" prefHeight="25.0" prefWidth="42.0" text="10" />
             <Label layoutX="265.0" layoutY="364.0" text="weight/amount" />
          </children>
       </AnchorPane>
