--- a/src/main/resources/views/mainpage.fxml
+++ b/src/main/resources/views/mainpage.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="mainpageOUT" prefHeight="500.0" prefWidth="600.0" styleClass="mainpageOUT" stylesheets="@../style/mainpageStyle.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="program.controllers.mainpageController">
+<AnchorPane fx:id="mainpageOUT" prefHeight="500.0" prefWidth="600.0" styleClass="mainpageOUT" stylesheets="@../style/mainpageStyle.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="program.controllers.mainpageController">
    <children>
       <AnchorPane fx:id="mainpageIN" layoutX="100.0" prefHeight="500.0" prefWidth="400.0" styleClass="mainpageIN">
          <effect>
@@ -77,6 +77,8 @@
                      <children>
                         <Label layoutX="44.0" layoutY="40.0" text="Your wieght" />
                         <TextField fx:id="textActualWeight" layoutX="126.0" layoutY="36.0" />
+                        <Label fx:id="labelPercent" layoutX="178.0" layoutY="183.0" />
+                        <Button fx:id="buttonCounter" layoutX="126.0" layoutY="67.0" mnemonicParsing="false" onAction="#actionCounter" prefHeight="26.0" prefWidth="171.0" text="Button" />
                      </children></AnchorPane>
                </content>
             </Tab>
